// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components snapshots renders the MenuBar correctly 1`] = `
<div
  className="MenuBar__Background-fWfgRq kBhrvE"
>
  <div
    className="MenuBar__ContentContainer-hKhuIW eWnVBG RawContentContainer__RawContentContainer-cpAunS liMkSd"
  >
    <a
      className="CodimoLink__HomeLink-jiMSkB cjTxT"
      href="/"
      onClick={[Function]}
    >
      <img
        className="CodimoLink__ShadowedImg-GmRrH tlHEY"
        src="/images/logo-title.png"
      />
      <span
        className="CodimoLink__Title-hhtJeH dALwAk"
      >
        Códimo
      </span>
    </a>
    <div
      className="MenuBar__LinksContainer-jAqpOR fwMiVN"
    >
      <ul
        className="MenuBar__LocalLinksContainer-jhZUMN hyPPl"
      />
      <div
        className="MenuBar__ExternalLinksContainer-JhLoa czunCm"
      >
        <a
          href="https://github.com/lgraziani2712/codimo"
          target="_blank"
        >
          <svg
            aria-labelledby="github-svg"
            className="ExternalLinkHoc__SvgIcon-cfbobQ htBNpY"
            role="img"
            viewBox="0 0 32.6 31.8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="github-svg"
            >
              Github
            </title>
            <path
              d="M16.3 0C7.3 0 0 7.3 0 16.3c0 7.2 4.7 13.3 11.1 15.5.8.1 1.1-.4 1.1-.8v-2.8c-4.5 1-5.5-2.2-5.5-2.2-.7-1.9-1.8-2.4-1.8-2.4-1.5-1 .1-1 .1-1 1.6.1 2.5 1.7 2.5 1.7 1.5 2.5 3.8 1.8 4.7 1.4.1-1.1.6-1.8 1-2.2-3.6-.4-7.4-1.8-7.4-8.1 0-1.8.6-3.2 1.7-4.4-.1-.3-.7-2 .2-4.2 0 0 1.4-.4 4.5 1.7 1.3-.4 2.7-.5 4.1-.5 1.4 0 2.8.2 4.1.5 3.1-2.1 4.5-1.7 4.5-1.7.9 2.2.3 3.9.2 4.3 1 1.1 1.7 2.6 1.7 4.4 0 6.3-3.8 7.6-7.4 8 .6.5 1.1 1.5 1.1 3V31c0 .4.3.9 1.1.8 6.5-2.2 11.1-8.3 11.1-15.5C32.6 7.3 25.3 0 16.3 0z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components snapshots renders the PageContainer correctly 1`] = `
<div
  className="PageContainer__Wrapper-kCvKOC bJokCq"
>
  <div />
  <div
    className="PageContainer__Footer-gzRtKy hEPong"
  >
    <div
      className="PageContainer__ContentContainer-cRjYKL dCzalx RawContentContainer__RawContentContainer-cpAunS liMkSd"
    >
      <span>
        Copyright © 2017 Luciano Graziani. Todos los derechos reservados.
      </span>
      <span>
        Distribuído bajo licencia 
        <a
          className="FooterLink__Link-eeoshK kcEwZw"
          href="https://github.com/lgraziani2712/codimo/blob/master/LICENSE"
          target="_blank"
        >
          MIT
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`Components snapshots renders the links correctly 1`] = `
<a
  className="FooterLink__Link-eeoshK kcEwZw"
  href="http://helloworld.test"
  target="_blank"
>
  Hello dear
</a>
`;

exports[`Components snapshots renders the links correctly 2`] = `
<a
  className="CodimoLink__HomeLink-jiMSkB cjTxT"
  href="/"
  onClick={[Function]}
>
  <img
    className="CodimoLink__ShadowedImg-GmRrH tlHEY"
    src="/images/logo-title.png"
  />
  <span
    className="CodimoLink__Title-hhtJeH dALwAk"
  >
    Códimo
  </span>
</a>
`;

exports[`Components snapshots renders the links correctly 3`] = `
<a
  href="https://github.com/lgraziani2712/codimo"
  target="_blank"
>
  <svg
    aria-labelledby="github-svg"
    className="ExternalLinkHoc__SvgIcon-cfbobQ htBNpY"
    role="img"
    viewBox="0 0 32.6 31.8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="github-svg"
    >
      Github
    </title>
    <path
      d="M16.3 0C7.3 0 0 7.3 0 16.3c0 7.2 4.7 13.3 11.1 15.5.8.1 1.1-.4 1.1-.8v-2.8c-4.5 1-5.5-2.2-5.5-2.2-.7-1.9-1.8-2.4-1.8-2.4-1.5-1 .1-1 .1-1 1.6.1 2.5 1.7 2.5 1.7 1.5 2.5 3.8 1.8 4.7 1.4.1-1.1.6-1.8 1-2.2-3.6-.4-7.4-1.8-7.4-8.1 0-1.8.6-3.2 1.7-4.4-.1-.3-.7-2 .2-4.2 0 0 1.4-.4 4.5 1.7 1.3-.4 2.7-.5 4.1-.5 1.4 0 2.8.2 4.1.5 3.1-2.1 4.5-1.7 4.5-1.7.9 2.2.3 3.9.2 4.3 1 1.1 1.7 2.6 1.7 4.4 0 6.3-3.8 7.6-7.4 8 .6.5 1.1 1.5 1.1 3V31c0 .4.3.9 1.1.8 6.5-2.2 11.1-8.3 11.1-15.5C32.6 7.3 25.3 0 16.3 0z"
    />
  </svg>
</a>
`;

exports[`Components snapshots renders the raw components correctly 1`] = `
<div
  className="RawContentContainer__RawContentContainer-cpAunS liMkSd"
/>
`;
